@@ -81,6 +81,8 @@ version 2.6.0 (??/??/2009):
 	* Google Talk mail notifications should now work for people for whom they
 	  inexplicably did not.  (Thanks to yukam for determining the reason)
 	* New XMPP and Google Talk accounts require SSL by default.
+	* Display kicks (and the reasons given) in chat rooms when an occupant is
+	  kicked.
 
 	Yahoo:
 	* P2P file transfers.  (Sulabh Mahajan)
